--- a/beprepared/www/css/index.css
+++ b/beprepared/www/css/index.css
@@ -37,82 +37,12 @@ body {
 * {
     box-sizing: border-box;
 }
-
-/* Remove margins and padding from the list */
-ul {
-    margin: 0;
-    padding: 0;
-}
-
-/* Style the list items */
-ul li {
-    cursor: pointer;
-    position: relative;
-    padding: 12px 8px 12px 40px;
-    list-style-type: none;
-    background: #fff;
-    font-size: 18px;
-    transition: 0.2s;
-
-    /* make the list items unselectable */
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-}
-
-/* Set all odd list items to a different color (zebra-stripes) */
-ul li:nth-child(odd) {
-    background: #f1f1f1;
-}
-
-/* When clicked on, add a background color and strike out text */
-ul li.checked {
-    background: #CCE5FF;
-    color: #264B72;
-    text-decoration: line-through;
-}
-
-/* Add a "checked" mark when clicked on */
-ul li.checked::before {
-    content: '';
-    position: absolute;
-    border-color: #264B72;
-    border-style: solid;
-    border-width: 0 2px 2px 0;
-    top: 10px;
-    left: 16px;
-    transform: rotate(45deg);
-    height: 15px;
-    width: 7px;
-} 
-#menu
+section
 {
-    width: 270px;
+    width: 360px;
     height: 690px;
-    background-color:#264B72; 
-}
-.ImgMenu
-{
-    margin:5px;
-    height: 30px;
-    width:30px;
-}
-#menuAbierto
-{
-    height: 40px;
-    width:270px;
-    background-color: white;
-    border: 1px solid #264B72;
 }
 .ocultar
 {
     display:none;
-}
-#MenuTitle
-{
-    color: #264B72;
-    display:inline;
-    padding-left: 20%;
-    font-size:24px;       
 }
