Lista Pantalla de Carga
Tambien se hizo la comunicacion con la siguiente pantalla de bienvenidos

--- a/beprepared/www/css/index.css
+++ b/beprepared/www/css/index.css
@@ -51,6 +51,10 @@ section
     background-color: white;
     
 }
+.Secbienvenidos
+{
+    background-color: #b0b969;
+}
 .loader {
     border: 9px solid #f3f3f3;
     border-radius: 50%;
