--- a/beprepared/www/css/index.css
+++ b/beprepared/www/css/index.css
@@ -252,7 +252,7 @@ ul li.checked::before {
     height: 10px;
     width: 5px;
 } 
-.close{
+.btnEliminar{
     float: right;
     width:15px;
     height: 20px;
