--- a/beprepared/www/css/index.css
+++ b/beprepared/www/css/index.css
@@ -258,6 +258,7 @@ ul li.checked::before {
     height: 20px;
     margin-right: -10px;
     margin-top:-10px;
+    display: block;
 }
 #tituloPrueba
 {
@@ -266,4 +267,10 @@ ul li.checked::before {
     font-family: 'Roboto', sans-serif;
     font-weight: 500;
     padding-left:20px;
+}
+#divEliminar
+{
+    width:40px;
+    height:405px;
+    float:right;
 }
