Comienzo implementacion pantallas iniciales

--- a/beprepared/www/css/index.css
+++ b/beprepared/www/css/index.css
@@ -51,10 +51,13 @@ section
     background-color: white;
     
 }
-.Secbienvenidos
+ .Secbienvenidos
 {
-    background-color: #b0b969;
-}
+    position: absolute;
+    /* background: url("img/Todas/fondo_pantalla_bienvenido.png"); */
+    /* background-color: #b0b969;  */
+    text-align: center;
+} 
 .loader {
     border: 9px solid #f3f3f3;
     border-radius: 50%;
@@ -80,3 +83,75 @@ section
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
   }
+  .secBienvenidosTextoStyle{
+   
+    font-family: "Loved by the King"; 
+    font-size: 18pt; 
+    font-style: normal; 
+    color: #0c5e65; 
+   
+}
+ /* #posiBienvenidosTexto{
+     position: absolute;
+     top: 50px;
+     right: 130px;
+ }
+ #posiPersonajeTexto{
+   position: absolute;
+   top: 200px;
+   right: 116px;
+
+}
+#posiNombreTexto{
+   position: absolute;
+   top: 370px;
+   right: 100px;
+   
+   
+}
+ #nombreUsuario{
+    font-family: "Roboto"; 
+    font-size: 13pt; 
+     font-style: thin; 
+     color: #b0b969; 
+     /* border-width: 738px; */
+     /* border: none;
+     border-bottom: 2pt solid #b0b969;
+     
+ }
+ ::placeholder {
+    font-family: "Roboto"; 
+    font-size: 13pt; 
+     font-style: thin; 
+     color: #b0b969; 
+    opacity: 1; 
+  }
+
+  #boton_siguiente{
+      position: absolute;
+      bottom: 20px;
+      right: 20px;
+  }
+  #logoBienvenidos{
+      position: absolute;
+      right: 106px;
+      top: 166px;
+  }
+#inputNombre{
+    position: absolute;
+    top: 450px;
+    right: 75px;
+    opacity: 0.6;
+}
+#el_opcion{
+    position: absolute;
+    top: 280px;
+    left: 97px;
+}
+#ella_opcion{
+    position: absolute;
+    top: 280px;
+    right: 97px;
+} */
+  
+  
