--- a/beprepared/www/css/index.css
+++ b/beprepared/www/css/index.css
@@ -96,21 +96,18 @@ section
 {
     background-color: white;
 }
-#infoUsuario
-{    
-    height: 143px;
-    width: 360px;    
-    background-color: #1166af;
-    padding-left:20px;
-    padding-right:20px;
-}
+
 #headInfoUsuario
 {
     padding-top:20px;
-    margin-bottom:5px;
+    padding-bottom:35px;
     height: 49px;    
     color:white;    
     font-size: 13pt;
+    width: 360px;
+    background-color: #1166af;
+    padding-left:20px;
+    padding-right:20px;
 }
 #opcionesPruebas
 {
@@ -134,6 +131,11 @@ section
     padding-left:20px;
     padding-right: 20px;     
     color:white;  
+    width: 360px;
+    background-color: #1166af;
+    padding-left:20px;
+    padding-right:20px;
+    margin-top:-5px;
 }
 #nivelPruebas
 {
@@ -195,7 +197,8 @@ section
 }
 .checklist
 {
-    height: 468px;
+    padding-top:20px;
+    height: 580px;
     width: 360px;
 }
 #espFooter
@@ -276,11 +279,21 @@ ul li.checked::before {
 }
 #tituloPrueba
 {
-    font-size: 20px;
+    font-size: 16px;
     color:#f6b419;
     font-family: 'Roboto', sans-serif;
-    font-weight: 500;
+    font-weight: 600;
     padding-left:20px;
+    margin-top:80px;
+}
+#tituloDesCheck
+{
+    font-size: 16px;
+    color:#f6b419;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 600;
+    padding-left:20px;
+    margin-top:-31px; 
 }
 #divEliminar
 {
@@ -298,4 +311,39 @@ ul li.checked::before {
     margin-left:55px;
     margin-bottom: -20px;
     color:white;
+}
+.desAccion
+{
+    height: 100px;
+    width:360px;
+    padding:0px;
+    margin-top:-10px;
+}
+#imgDes
+{
+    margin-top:-20px;
+    margin-left:20px;
+}
+#tituloDes
+{
+    font-size:16px;
+    color:#1166af;
+    margin-top:-100px;
+    margin-left: 148px;
+    font-weight: 600;
+}
+.descripDes
+{
+    color:#37b0cb;
+    font-size:12px;
+    margin-left: 148px;
+    margin-top:-15px;
+}
+#avanceDes
+{
+    font-weight: 600;
+    font-size:16px;
+    color:#f6b419;
+    margin-left: 148px;
+    margin-top:-10px;
 }
