--- a/beprepared/www/css/index.css
+++ b/beprepared/www/css/index.css
@@ -286,6 +286,15 @@ ul li.checked::before {
     padding-left:20px;
     margin-top:80px;
 }
+#tituloMenDes
+{
+    font-size: 16px;
+    color:#f6b419;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 600;
+    padding-left:20px;
+    margin-top:80px;
+}
 #tituloDesCheck
 {
     font-size: 16px;
@@ -293,7 +302,7 @@ ul li.checked::before {
     font-family: 'Roboto', sans-serif;
     font-weight: 600;
     padding-left:20px;
-    margin-top:-31px; 
+    margin-top:20px; 
 }
 #divEliminar
 {
