--- a/beprepared/platforms/android/app/src/main/assets/www/css/index.css
+++ b/beprepared/platforms/android/app/src/main/assets/www/css/index.css
@@ -16,7 +16,12 @@
  * specific language governing permissions and limitations
  * under the License.
  */
-* {
+html{
+    margin:    0 auto;
+    max-width: 360px;
+    max-height:690px;
+}
+ * {
     -webkit-tap-highlight-color: rgba(0,0,0,0); /* make transparent link selection, adjust last value opacity 0 to 1.0 */
 }
 
