--- a/beprepared/platforms/android/app/src/main/assets/www/css/pantallaBienvenido.css
+++ b/beprepared/platforms/android/app/src/main/assets/www/css/pantallaBienvenido.css
@@ -1,38 +1,51 @@
+body {
+   width: 360px;
+   height: 730px;
+   -webkit-touch-callout: none;                /* prevent callout to copy image, etc when tap to hold */
+   -webkit-text-size-adjust: none;             /* prevent webkit from resizing text to fit */
+   -webkit-user-select: none;     
+   font-family: 'Roboto', sans-serif;
+   font-size:12px;
+   margin:0px;
+   padding:0px;
+   /* Padding to avoid the "unsafe" areas behind notches in the screen
+   padding: env(safe-area-inset-top, 0px) env(safe-area-inset-right, 0px) env(safe-area-inset-bottom, 0px) env(safe-area-inset-right, 0px); */
+   
+}
 #posiBienvenidosTexto{
     position: absolute;
-    top: 50px;
+    top: 10px;
     right: 130px;
 }
 .Secbienvenidos{
-                        background-image: url("../img/Todas/fondo_pantalla_bienvenido.png");
+   background-image: url("../img/Todas/fondo_pantalla_bienvenido.png");
 } 
                     
 #posiPersonajeTexto{
   position: absolute;
-  top: 200px;
+  top: 160px;
   right: 116px;
 
 }
 #posiNombreTexto{
   position: absolute;
-  top: 370px;
-  right: 100px;
+  top: 320px;
+  right: 90px;
   
   
 }
 #nombreUsuario{
    font-family: "Roboto"; 
-   font-size: 13pt; 
+   font-size: 15pt; 
     font-style: thin; 
     color:#0c5e65; 
-    /* border-width: 738px; */
     border: none;
     border-bottom: 2pt solid #b0b969;
     
 }
 ::placeholder {
    font-family: "Roboto"; 
-   font-size: 13pt; 
+   font-size: 15pt; 
     font-style: thin; 
     color: #b0b969;
    opacity: 1; 
@@ -46,21 +59,54 @@
  #logoBienvenidos{
      position: absolute;
      right: 106px;
-     top: 166px;
+     top: 116px;
  }
 #inputNombre{
    position: absolute;
-   top: 450px;
-   right: 75px;
+   top: 380px;
+   right: 65px;
    opacity: 0.6;
 }
 #el_opcion{
    position: absolute;
-   top: 280px;
+   top: 250px;
    left: 97px;
 }
 #ella_opcion{
    position: absolute;
-   top: 280px;
+   top: 250px;
    right: 97px;
+}
+#anaBox{
+   position: absolute;
+ 
+	top: 497px;
+    left: 28px;
+	background: white;
+	width: 300px;
+    height: 121px;
+	margin: auto;
+    border-radius: 8px;
+}
+#nombreAnaBienvenidos{
+   position: absolute;
+   top: -11px;
+   right: 225px;
+}
+#figuraAnaBienvenidos{
+   position: absolute;
+   top: -70px;
+   right: 19px;
+}
+#AnaTextBienvenidos{
+   font-family: "Roboto"; 
+   font-size: 9pt; 
+    font-style: Thin; 
+    color: black; 
+    position: absolute;
+    font-weight: bold;
+    top: 16px;
+    
+   left: 39px;
+   margin: auto;
 }
