--- a/beprepared/platforms/android/app/src/main/assets/www/css/pantallaEnfoque.css
+++ b/beprepared/platforms/android/app/src/main/assets/www/css/pantallaEnfoque.css
@@ -1,23 +1,313 @@
+body {
+    width: 360px;
+    height: 730px;
+    -webkit-touch-callout: none;                /* prevent callout to copy image, etc when tap to hold */
+    -webkit-text-size-adjust: none;             /* prevent webkit from resizing text to fit */
+    -webkit-user-select: none;     
+    font-family: 'Roboto', sans-serif;
+    font-size:12px;
+    margin:0px;
+    padding:0px;
+    /* Padding to avoid the "unsafe" areas behind notches in the screen
+    padding: env(safe-area-inset-top, 0px) env(safe-area-inset-right, 0px) env(safe-area-inset-bottom, 0px) env(safe-area-inset-right, 0px); */
+    
+}
 #encabezadoEnfoque{
     height: 143px;
-    background-color: #243E90; 
+    background-color: #1166af; 
 }
 #textoNombreEnf{
-    font-family: "Roboto"; 
-    font-size: 18pt; 
-     font-style: Thin; 
-     color: white; 
-     position: absolute;
-     top: 7px;
-     left: 70px;
-     margin: auto;
+    margin-top:-20px;
+    margin-left:10px;
+    margin-bottom: -20px;
+    color:white;
+    font-size: 15pt;
 }
 #imgpersonajeSeleccionadoEnf{
+    margin-left:20px
+}
+#imgUniforme{
     position: absolute;
-    top: -530px;
-    left: -200px;
+    top: -60px;
+    left: -160px;
     right: 0;
     bottom: 0;
     margin: auto;
 }
-
+#PSText{
+    font-family: "Roboto"; 
+    font-size: 14pt; 
+     font-style: Thin; 
+     color: goldenrod; 
+     position: absolute;
+     top: 400px;
+    left: 200px;
+    margin: auto; 
+}
+#PLText{
+    font-family: "Roboto"; 
+    font-size: 14pt; 
+     font-style: Thin; 
+     color: goldenrod; 
+     position: absolute;
+     top: 570px;
+    left: 210px;
+    margin: auto; 
+}
+#porcenPS{
+    font-family: "Roboto"; 
+    font-size: 14pt; 
+     font-style: Thin; 
+     color: goldenrod; 
+     position: absolute;
+     top: 383px;
+    left: 250px;
+    margin: auto;
+}
+#porcenUniforme{
+    font-family: "Roboto"; 
+    font-size: 14pt; 
+     font-style: Thin; 
+     color: goldenrod; 
+     position: absolute;
+     top: 383px;
+    left: 88px;
+    margin: auto;
+}
+#porcenPL{
+    font-family: "Roboto"; 
+    font-size: 14pt; 
+     font-style: Thin; 
+     color: goldenrod; 
+     position: absolute;
+     top: 550px;
+     left: 250px;
+    margin: auto;
+}
+#porcenPP{
+    font-family: "Roboto"; 
+    font-size: 14pt; 
+     font-style: Thin; 
+     color: goldenrod; 
+     position: absolute;
+     top: 550px;
+     left: 88px;
+    margin: auto;
+}
+#uniformeText{
+    font-family: "Roboto"; 
+    font-size: 14pt; 
+     font-style: Thin; 
+     color: goldenrod; 
+     position: absolute;
+     top: 400px;
+    left: 55px;
+    margin: auto; 
+}
+#PPText{
+    font-family: "Roboto"; 
+    font-size: 14pt; 
+     font-style: Thin; 
+     color: goldenrod; 
+     position: absolute;
+     top: 570px;
+    left: 19px;
+    margin: auto; 
+}
+#imgPs{
+    position: absolute;
+    top: -60px;
+    left: 150px;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+}
+#imgPp{
+    position: absolute;
+    top: 300px;
+    left: -180px;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+}
+#imgPl{
+    position: absolute;
+    top: 300px;
+    left: 150px;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+}
+#footerEnfoque
+{
+    position: absolute;
+    height: 79px;
+    width: 360px;    
+    background-color: #1166af;
+    /* padding-left:20px;
+    padding-right:20px;
+    padding-top: 10px; */
+    bottom: 0px;
+    
+    color:white;
+    padding-left:20px;
+    padding-right:20px;
+    padding-bottom: 10px;
+    padding-top: 20px;
+}
+#imgPruebasFooter
+{
+    position: absolute;
+    float: left;
+    padding-left:8px;
+    margin-top:-5px;
+}
+#txtPruebasFoot
+{
+    padding-top:15px;
+    
+}
+#imgEspFooter
+{
+    position: absolute;
+    float: right;
+    margin-left: 145px;
+    
+}
+#txtEspFoot
+{
+    float: right;    
+    margin-top:30px;
+}
+#imgDesFooter
+{   
+    position: absolute;
+    float: right;
+    right: 175px;
+}
+#txtDesFoot
+{    
+    position: absolute;
+    float: right;
+    margin-top:32px;
+}
+#eligeTextEnfoque{
+    position: absolute;
+    top: 180px;
+    left: 80px;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+    font-family: "Loved by the King"; 
+    font-size: 32pt; 
+    font-style: normal; 
+    color: goldenrod;
+}
+#imgVolverUnidad{
+    position: absolute;
+    top: 10px;
+    left: 17px;
+    margin: auto;
+}
+#lightbox{
+	position: absolute;
+	top: 0px;
+	left: 0px;
+    background: rgba(0,0,0,.5);
+	width: 360px;
+    height: 730px;
+	margin: 0;
+	padding: 0;
+	z-index: 2;
+}
+#ventanaAna{
+    position: absolute;
+ 
+	top: 497px;
+    left: 28px;
+	background: white;
+	width: 300px;
+    height: 86px;
+	margin: auto;
+    border-radius: 8px;
+}
+#nombreAna{
+    position: absolute;
+	top: -8px;
+    left: 28px;
+	margin: auto;
+   
+}
+#figuraAna{
+    position: absolute;
+	top: -72px;
+    left: 215px;
+	margin: auto;
+}
+#AnaText1{
+    font-family: "Roboto"; 
+    font-size: 9pt; 
+     font-style: Thin; 
+     color: goldenrod; 
+     position: absolute;
+     font-weight: bold;
+     top: 18px;
+    left: 19px;
+    margin: auto; 
+}
+#flechaDialogo{
+    position: absolute;
+	top: 80px;
+    left: 140px;
+	margin: auto;
+}
+#AnaText2{
+    font-family: "Roboto"; 
+    font-size: 9pt; 
+     font-style: Thin; 
+     color: goldenrod; 
+     position: absolute;
+     font-weight: bold;
+     top: 515px;
+    left: 39px;
+    margin: auto; 
+}
+#meQuedaClaro{
+    font-family: "Roboto"; 
+    font-size: 8pt; 
+     font-style: Thin; 
+     color: #1166af; 
+     position: absolute;
+     font-weight: bold;
+     top: 578px;
+    left: 244px;
+    border-bottom: 2px solid #1166af;
+    margin: auto; 
+}
+#nivelPruebasEnf
+{
+    margin-top:-6px;
+    padding-left:35px;
+}
+#barraSaludEnf
+{
+    float:right;
+    margin-top: -80px;
+}
+#barraExpEnf
+{
+    float:right;
+    margin-top: -50px;
+}
+#procSaludEnf
+{
+    float:right;
+    margin-top: -64px; 
+    color:white;
+}
+#procExpEnf
+{
+    float:right;
+    margin-top: -38px; 
+    color:white;
+}
