--- a/beprepared/www/css/index.css
+++ b/beprepared/www/css/index.css
@@ -108,7 +108,7 @@ section
     padding-bottom:38px;
     height: 49px;    
     color:white;    
-    font-size: 13pt;
+    font-size: 15pt;
     width: 360px;
     background-color: #1166af;
     padding-left:20px;
@@ -122,6 +122,20 @@ section
 {
     float: left;
     padding-top:2px;
+}
+#volverPruebasPuntos
+{
+    margin-left:5px;
+    float: left;
+    margin-top:10px;
+    
+}
+#nombreTextPrueba
+{
+    margin-top:-20px;
+    margin-left:10px;
+    margin-bottom: -20px;
+    color:white;
 }
 #volverDesafios
 {
@@ -197,11 +211,13 @@ section
 {
     float:right;
     margin-top: -64px; 
+    color:white;
 }
 #procExpPruebas
 {
     float:right;
     margin-top: -38px; 
+    color:white;
 }
 #footer
 {
@@ -227,7 +243,7 @@ section
 .checklist
 {
     padding-top:20px;
-    height: 610px;
+    height: 600px;
     width: 360px;
 }
 #espFooter
@@ -344,7 +360,7 @@ ul li.checked::before {
     font-family: 'Roboto', sans-serif;
     font-weight: 600;
     padding-left:20px;
-    margin-top:10px; 
+    margin-top:100px; 
 }
 #divEliminar
 {
@@ -356,13 +372,7 @@ ul li.checked::before {
     transition: all 0.5s ease-out;
     opacity: 0;
   }
-#nombrePruebas
-{
-    margin-top:-20px;
-    margin-left:55px;
-    margin-bottom: -20px;
-    color:white;
-}
+
 .desAccion
 {
     height: 100px;
