--- a/beprepared/www/css/pantallaBienvenido.css
+++ b/beprepared/www/css/pantallaBienvenido.css
@@ -1,3 +1,17 @@
+body {
+   width: 360px;
+   height: 730px;
+   -webkit-touch-callout: none;                /* prevent callout to copy image, etc when tap to hold */
+   -webkit-text-size-adjust: none;             /* prevent webkit from resizing text to fit */
+   -webkit-user-select: none;     
+   font-family: 'Roboto', sans-serif;
+   font-size:12px;
+   margin:0px;
+   padding:0px;
+   /* Padding to avoid the "unsafe" areas behind notches in the screen
+   padding: env(safe-area-inset-top, 0px) env(safe-area-inset-right, 0px) env(safe-area-inset-bottom, 0px) env(safe-area-inset-right, 0px); */
+   
+}
 #posiBienvenidosTexto{
     position: absolute;
     top: 10px;
@@ -22,7 +36,7 @@
 }
 #nombreUsuario{
    font-family: "Roboto"; 
-   font-size: 13pt; 
+   font-size: 15pt; 
     font-style: thin; 
     color:#0c5e65; 
     border: none;
@@ -31,7 +45,7 @@
 }
 ::placeholder {
    font-family: "Roboto"; 
-   font-size: 13pt; 
+   font-size: 15pt; 
     font-style: thin; 
     color: #b0b969;
    opacity: 1; 
