--- a/beprepared/www/css/pantallaEnfoque.css
+++ b/beprepared/www/css/pantallaEnfoque.css
@@ -1,29 +1,35 @@
+body {
+    width: 360px;
+    height: 730px;
+    -webkit-touch-callout: none;                /* prevent callout to copy image, etc when tap to hold */
+    -webkit-text-size-adjust: none;             /* prevent webkit from resizing text to fit */
+    -webkit-user-select: none;     
+    font-family: 'Roboto', sans-serif;
+    font-size:12px;
+    margin:0px;
+    padding:0px;
+    /* Padding to avoid the "unsafe" areas behind notches in the screen
+    padding: env(safe-area-inset-top, 0px) env(safe-area-inset-right, 0px) env(safe-area-inset-bottom, 0px) env(safe-area-inset-right, 0px); */
+    
+}
 #encabezadoEnfoque{
     height: 143px;
     background-color: #1166af; 
 }
 #textoNombreEnf{
-    font-family: "Roboto"; 
-    font-size: 18pt; 
-     font-style: Thin; 
-     color: white; 
-     position: absolute;
-     top: 7px;
-     left: 80px;
-     margin: auto;
+    margin-top:-20px;
+    margin-left:10px;
+    margin-bottom: -20px;
+    color:white;
+    font-size: 15pt;
 }
 #imgpersonajeSeleccionadoEnf{
-    position: absolute;
-    top: -530px;
-    left: -200px;
-    right: 0;
-    bottom: 0;
-    margin: auto;
+    margin-left:20px
 }
 #imgUniforme{
     position: absolute;
-    top: -20px;
-    left: -180px;
+    top: -60px;
+    left: -160px;
     right: 0;
     bottom: 0;
     margin: auto;
@@ -32,7 +38,7 @@
     font-family: "Roboto"; 
     font-size: 14pt; 
      font-style: Thin; 
-     color: black; 
+     color: goldenrod; 
      position: absolute;
      top: 400px;
     left: 200px;
@@ -42,7 +48,7 @@
     font-family: "Roboto"; 
     font-size: 14pt; 
      font-style: Thin; 
-     color: black; 
+     color: goldenrod; 
      position: absolute;
      top: 570px;
     left: 210px;
@@ -52,7 +58,7 @@
     font-family: "Roboto"; 
     font-size: 14pt; 
      font-style: Thin; 
-     color: black; 
+     color: goldenrod; 
      position: absolute;
      top: 383px;
     left: 250px;
@@ -62,7 +68,7 @@
     font-family: "Roboto"; 
     font-size: 14pt; 
      font-style: Thin; 
-     color: black; 
+     color: goldenrod; 
      position: absolute;
      top: 383px;
     left: 88px;
@@ -72,7 +78,7 @@
     font-family: "Roboto"; 
     font-size: 14pt; 
      font-style: Thin; 
-     color: black; 
+     color: goldenrod; 
      position: absolute;
      top: 550px;
      left: 250px;
@@ -82,7 +88,7 @@
     font-family: "Roboto"; 
     font-size: 14pt; 
      font-style: Thin; 
-     color: black; 
+     color: goldenrod; 
      position: absolute;
      top: 550px;
      left: 88px;
@@ -92,7 +98,7 @@
     font-family: "Roboto"; 
     font-size: 14pt; 
      font-style: Thin; 
-     color: black; 
+     color: goldenrod; 
      position: absolute;
      top: 400px;
     left: 55px;
@@ -102,7 +108,7 @@
     font-family: "Roboto"; 
     font-size: 14pt; 
      font-style: Thin; 
-     color: black; 
+     color: goldenrod; 
      position: absolute;
      top: 570px;
     left: 19px;
@@ -110,7 +116,7 @@
 }
 #imgPs{
     position: absolute;
-    top: -20px;
+    top: -60px;
     left: 150px;
     right: 0;
     bottom: 0;
@@ -118,7 +124,7 @@
 }
 #imgPp{
     position: absolute;
-    top: 320px;
+    top: 300px;
     left: -180px;
     right: 0;
     bottom: 0;
@@ -126,7 +132,7 @@
 }
 #imgPl{
     position: absolute;
-    top: 320px;
+    top: 300px;
     left: 150px;
     right: 0;
     bottom: 0;
@@ -135,7 +141,7 @@
 #footerEnfoque
 {
     position: absolute;
-    height: 59px;
+    height: 79px;
     width: 360px;    
     background-color: #1166af;
     /* padding-left:20px;
@@ -144,49 +150,46 @@
     bottom: 0px;
     
     color:white;
+    padding-left:20px;
+    padding-right:20px;
+    padding-bottom: 10px;
+    padding-top: 20px;
 }
 #imgPruebasFooter
 {
     position: absolute;
     float: left;
-    padding-left:26px;
-    padding-top: 13px;
+    padding-left:8px;
+    margin-top:-5px;
 }
 #txtPruebasFoot
 {
-    position: absolute;
-    float: left;
-    padding-left: 17px;
-    padding-top: 27px;
+    padding-top:15px;
     
 }
 #imgEspFooter
 {
     position: absolute;
     float: right;
-    right:45px;
-    bottom: 18px;
+    margin-left: 145px;
+    
 }
 #txtEspFoot
 {
-    position: absolute;
-    float: right;
-    right: 20px;
-    top: 30px;
+    float: right;    
+    margin-top:30px;
 }
 #imgDesFooter
 {   
     position: absolute;
     float: right;
     right: 175px;
-    bottom: 18px;
 }
 #txtDesFoot
 {    
     position: absolute;
     float: right;
-    right: 170px;
-    top: 29px;
+    margin-top:32px;
 }
 #eligeTextEnfoque{
     position: absolute;
@@ -212,7 +215,7 @@
 	left: 0px;
     background: rgba(0,0,0,.5);
 	width: 360px;
-    height: 690px;
+    height: 730px;
 	margin: 0;
 	padding: 0;
 	z-index: 2;
@@ -245,7 +248,7 @@
     font-family: "Roboto"; 
     font-size: 9pt; 
      font-style: Thin; 
-     color: black; 
+     color: goldenrod; 
      position: absolute;
      font-weight: bold;
      top: 18px;
@@ -262,7 +265,7 @@
     font-family: "Roboto"; 
     font-size: 9pt; 
      font-style: Thin; 
-     color: black; 
+     color: goldenrod; 
      position: absolute;
      font-weight: bold;
      top: 515px;
@@ -280,4 +283,31 @@
     left: 244px;
     border-bottom: 2px solid #1166af;
     margin: auto; 
+}
+#nivelPruebasEnf
+{
+    margin-top:-6px;
+    padding-left:35px;
+}
+#barraSaludEnf
+{
+    float:right;
+    margin-top: -80px;
+}
+#barraExpEnf
+{
+    float:right;
+    margin-top: -50px;
+}
+#procSaludEnf
+{
+    float:right;
+    margin-top: -64px; 
+    color:white;
+}
+#procExpEnf
+{
+    float:right;
+    margin-top: -38px; 
+    color:white;
 }
