--- a/beprepared/www/css/pantallaUnidad.css
+++ b/beprepared/www/css/pantallaUnidad.css
@@ -1,83 +1,90 @@
+body {
+    width: 360px;
+    height: 730px;
+    -webkit-touch-callout: none;                /* prevent callout to copy image, etc when tap to hold */
+    -webkit-text-size-adjust: none;             /* prevent webkit from resizing text to fit */
+    -webkit-user-select: none;     
+    font-family: 'Roboto', sans-serif;
+    font-size:12px;
+    margin:0px;
+    padding:0px;
+    /* Padding to avoid the "unsafe" areas behind notches in the screen
+    padding: env(safe-area-inset-top, 0px) env(safe-area-inset-right, 0px) env(safe-area-inset-bottom, 0px) env(safe-area-inset-right, 0px); */
+    
+}
 #encabezadoUnidad{
     height: 143px;
     background-color: #E1DE82; 
+    padding-top:17px;
+    padding-left:20px;
+    padding-right:20px;
 }
 
 #textoNombre{
-    font-family: "Roboto"; 
-    font-size: 18pt; 
-     font-style: Thin; 
-     color: white; 
-     position: absolute;
-     top: 7px;
-     left: 78px;
-     margin: auto;
+    margin-top:-20px;
+    margin-left:10px;
+    margin-bottom: -20px;
+    color:white;
+    font-size: 15pt;
 }
 
 #imgVolverInicio{
-    position: absolute;
-    top: 10px;
-    left: 17px;
-    margin: auto;
+    float: left;
+    padding-top:2px;
 }
 
 #imgOpcionesInicio{
-    position: absolute;
-    top: 10px;
-    left: 310px;
+    float: right;
+    margin-left: 300px;
+    margin-top:10px;
     margin: auto;
 }
 
 #imgMenuInicio{
-    position: absolute;
-    top: 17px;
-    left: 40px;
-    margin: auto;
+    margin-left:5px;
+    float: left;
+    margin-top:10px;
 }
 
 #imgpersonajeSeleccionado{
     position: absolute;
-    top: -530px;
-    left: -200px;
-    right: 0;
-    bottom: 0;
+    float: left;
+    left:45px;
+    bottom: 610px;
     margin: auto;
 }
 
-#imgBarraSalud{
-    position: absolute;
-    top: -560px;
-    left: 120px;
-    right: 0;
-    bottom: 0;
-    margin: auto;
+#barraSaludUni{
+    float:right;
+    margin-top:25px;
+    margin-left: 200px;
+}
+#barraExpUni
+{
+    float:right;
+    margin-top:20px;
+    margin-left: 200px;
 }
 
 #imgSalud{
     position: absolute;
-    top: -560px;
-    left: -60px;
-    right: 0;
-    bottom: 0;
-    margin: auto;
+    margin-top: 50px;
+    margin-left:5px;
 }
 
-#imgBarraExp{
+/* #imgBarraExp{
     position: absolute;
     top: -490px;
     left: 120px;
     right: 0;
     bottom: 0;
     margin: auto;
-} 
+}  */
 
 #imgExp{
     position: absolute;
-    top: -490px;
-    left: -60px;
-    right: 0;
-    bottom: 0;
-    margin: auto;
+    margin-top: 75px;
+    margin-left:5px;
 }
 #eligeText{
     position: absolute;
@@ -117,35 +124,31 @@
 }
 #tropaText{
     position: absolute;
-    top: 337px;
+    top: 357px;
     left: 153px;
     margin: auto;
-    font-family: "Roboto"; 
-    font-style: Thin; 
-    font-size: 16pt; 
+    font-size: 15pt; 
+    font-weight: 400;
     color: #231f20; 
     opacity: 70%;
 }
 #sociedadText{
     position: absolute;
-    top: 485px;
+    top: 505px;
     left: 138px;
     margin: auto;
-    font-family: "Roboto"; 
-    font-style: Thin; 
-    font-size: 16pt; 
+    font-weight: 700;
+    font-size: 15pt; 
     color: #231f20; 
-    font-weight: bold;
     
 }
 #clanText{
     position: absolute;
-    top: 640px;
+    top: 660px;
     left: 159px;
     margin: auto;
-    font-family: "Roboto"; 
-    font-style: Thin; 
-    font-size: 16pt; 
+    font-size: 15pt; 
+    font-weight: 400;
     color: #231f20; 
     opacity: 70%;
 }
@@ -162,21 +165,28 @@
 }
 #saludText{
     position: absolute;
-    top: 74px;
-    left: 286px;
-    margin: auto;
-    font-family: "Roboto"; 
-    font-style: Thin; 
-    font-size: 9pt; 
+    margin-left: 245px;
     color: white; 
+    margin-top:60px;
 }
 #expeText{
     position: absolute;
-    top: 109px;
-    left: 254px;
-    margin: auto;
-    font-family: "Roboto"; 
-    font-style: Thin; 
-    font-size: 9pt; 
+    margin-left: 220px;
     color: white; 
+    margin-top:95px;
+
+}
+#procSaludUni
+{
+    color:white;
+    margin-left:285px;
+    position: absolute;
+    margin-top:35px;
+}
+#procExpUni
+{
+    color:white;
+    margin-left: 295px;
+    position: absolute;
+    margin-top:72px;
 }
