--- a/beprepared/platforms/android/app/src/main/assets/www/css/pantallaBienvenido.css
+++ b/beprepared/platforms/android/app/src/main/assets/www/css/pantallaBienvenido.css
@@ -99,12 +99,10 @@ body {
    right: 19px;
 }
 #AnaTextBienvenidos{
-   font-family: "Roboto"; 
+  
    font-size: 9pt; 
-    font-style: Thin; 
-    color: black; 
+    color: #2d2d2d; 
     position: absolute;
-    font-weight: bold;
     top: 16px;
     
    left: 39px;
