--- a/beprepared/platforms/android/app/src/main/assets/www/css/pantallaUnidad.css
+++ b/beprepared/platforms/android/app/src/main/assets/www/css/pantallaUnidad.css
@@ -68,9 +68,10 @@ body {
 
 #imgSalud{
     position: absolute;
-    margin-top: 50px;
-    margin-left:5px;
+    top: 65px;
+    left:165px;
 }
+
 
 /* #imgBarraExp{
     position: absolute;
@@ -83,8 +84,8 @@ body {
 
 #imgExp{
     position: absolute;
-    margin-top: 75px;
-    margin-left:5px;
+    top: 95px;
+    left:165px;
 }
 #eligeText{
     position: absolute;
